feat: create greet method

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "greeter",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "format": "eslint './src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
